change user seller id to hex8bit and jwt issuer now using user id
